scripts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddc-demo-service
spec:
  selector:
    app: ddc-demo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30001
  type: NodePort
