scripts/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ddc-demo-route
spec:
  path: /
  to:
    kind: Service
    name: ddc-demo-service
  port:
    targetPort: 8080
